Cambio en las imagenes y en las vistas

--- a/freetime.html
+++ b/freetime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elen - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Free Time</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -36,9 +36,9 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="colorlib-active"><a href="photography.html">Photography</a></li>
+					<li class="colorlib-active"><a href="freetime.html">Free Time</a></li>
 					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
+					<li><a href="research.html">Research</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -54,9 +54,12 @@
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
 				</ul>
 			</div>
-		</aside> <!-- END COLORLIB-ASIDE -->
+		</aside> <!-- END COLORLIB-ASIDE -->	
 		<div id="colorlib-main">
 			<section class="ftco-section-2">
+				<div class="container">
+					<p class="mb-4"> I love to do a lot of stuff in my free time, but my greatest passion is drawing.</p>
+				</div>	
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
@@ -176,24 +179,11 @@
 	          <div class="col-md">
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
 	              <h2 class="ftco-heading-2">Category</h2>
-	              <ul class="list-unstyled categories">
-	                <li><a href="#">Photography <span>(6)</span></a></li>
-	                <li><a href="#">Fashion <span>(8)</span></a></li>
-	                <li><a href="#">Technology <span>(2)</span></a></li>
-	                <li><a href="#">Travel <span>(2)</span></a></li>
-	              </ul>
 	            </div>
 	          </div>
 	          <div class="col-md">
 	             <div class="ftco-footer-widget mb-4">
 	              <h2 class="ftco-heading-2">Archives</h2>
-	              <ul class="list-unstyled categories">
-	              	<li><a href="#">October 2018 <span>(6)</span></a></li>
-	                <li><a href="#">September 2018 <span>(6)</span></a></li>
-	                <li><a href="#">August 2018 <span>(8)</span></a></li>
-	                <li><a href="#">July 2018 <span>(2)</span></a></li>
-	                <li><a href="#">June 2018 <span>(7)</span></a></li>
-	              </ul>
 	            </div>
 	          </div>
 	          <div class="col-md">
