--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Explorer - Free Bootstrap 4 Template by Colorlib</title>
+    <title>About</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -62,10 +62,11 @@
 					<div class="col-md-8 text text-center">
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<ul class="ftco-social mt-3">
+							<h2 class="subheading">Hi I'm</h2>
+							<h1 class="mb-4">Constanza Villegas</h1>
+							<p class="mb-4">I am an electrical engineer and a MSc student Universidad de Chile. My research interest are</p>
+							<p class="mb-4">My work is focused on the application of Bayesian tools in astronomy. </p>
+							<p class="mb-4">I love tea, cats, wat. </p><ul class="ftco-social mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
