--- a/research.html
+++ b/research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact</title>
+    <title>Research</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -36,11 +36,11 @@
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
+					<li><a href="freetime.html">Free Time</a></li>
+					<li class="colorlib-active"><a href="research.html">Research</a></li>					
 					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
 					<li><a href="about.html">About</a></li>
-					<li class="colorlib-active"><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -56,97 +56,27 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<section class="ftco-section contact-section">
-	      <div class="container">
-	        <div class="row d-flex mb-5 contact-info">
-	          <div class="col-md-12 mb-4">
-	            <h2 class="h4 font-weight-bold">Contact Information</h2>
-	          </div>
-	          <div class="w-100"></div>
-	          <div class="col-md-3">
-	            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-	          </div>
-	          <div class="col-md-3">
-	            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-	          </div>
-	        </div>
-	        <div class="row block-9">
-	          <div class="col-md-6 order-md-last pr-md-5">
-	            <form action="#">
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Your Name">
-	              </div>
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Your Email">
-	              </div>
-	              <div class="form-group">
-	                <input type="text" class="form-control" placeholder="Subject">
-	              </div>
-	              <div class="form-group">
-	                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-	              </div>
-	              <div class="form-group">
-	                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-	              </div>
-	            </form>
-	          
-	          </div>
-
-	          <div class="col-md-6">
-	          	<div id="map"></div>
-	          </div>
-	        </div>
-	      </div>
+			<div class="hero-wrap js-fullheight"  data-stellar-background-ratio="0.5">
+			<section class="ftco-section">
+	    	<div class="container">
+				<p class="mb-4">My work is focused on Bayesian inference in the estimation of orbital parameters in triple hierarchical star-systems. I use tools like graphical models and sample-based approximation algorithms.</p>
+				<p class="mb-4">During my undergraduate studies I was also a member of the RoboCup SPL team UChile Robotics Team, competing in China (2015) and Germany (2016).</p>
+						<h3 class="sidebar-heading">Conference Proceedings</h3>
+						<ul>
+							<li>Matías Mattamala, <b>Constanza Villegas</b>, José Miguel Yánez, Pablo Cano, and Javier Ruiz-Del-Solar. A dynamic and efficient active vision system for humanoid soccer robots. In RoboCup 2015: Robot World Cup XIX on RoboCup 2015: Robot World Cup XIX - Volume 9513, pages 316–327, New York, NY, USA, 2015. Springer-Verlag New York, Inc</li>
+							<li>Pablo Cano, Yoshiro Tsutsumi, <b>Constanza Villegas</b>, and Javier Ruiz-Del-Solar. Robust detection of white goals. In RoboCup 2015: Robot World Cup XIX on RoboCup 2015: Robot World Cup XIX - Volume 9513, pages 229–238, New York, NY, USA, 2015. Springer-Verlag New York, Inc</li>
+						  </ul> 
+						  <h3 class="sidebar-heading">Talks</h3>
+						  <ul>
+							  <li>"Bayes-based estimation of orbital parameters in triple hierarchical star-systems" at the Workshop on Binary Stars, ESO Chile, January 2020.</li>
+							</ul> 
+	    	</div>
+	    	</div>
 	    </section>
-
 	    <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
-	        <div class="row mb-5">
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4 ml-md-4">
-	              <h2 class="ftco-heading-2">Category</h2>
-	              <ul class="list-unstyled categories">
-	                <li><a href="#">Photography <span>(6)</span></a></li>
-	                <li><a href="#">Fashion <span>(8)</span></a></li>
-	                <li><a href="#">Technology <span>(2)</span></a></li>
-	                <li><a href="#">Travel <span>(2)</span></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	             <div class="ftco-footer-widget mb-4">
-	              <h2 class="ftco-heading-2">Archives</h2>
-	              <ul class="list-unstyled categories">
-	              	<li><a href="#">October 2018 <span>(6)</span></a></li>
-	                <li><a href="#">September 2018 <span>(6)</span></a></li>
-	                <li><a href="#">August 2018 <span>(8)</span></a></li>
-	                <li><a href="#">July 2018 <span>(2)</span></a></li>
-	                <li><a href="#">June 2018 <span>(7)</span></a></li>
-	              </ul>
-	            </div>
-	          </div>
-	          <div class="col-md">
-	            <div class="ftco-footer-widget mb-4">
-	            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-	            	<div class="block-23 mb-3">
-		              <ul>
-		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-		                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-		                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
-		              </ul>
-		            </div>
-	            </div>
-	          </div>
-	        </div>
 	        <div class="row">
 	          <div class="col-md-12">
-
 	            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 	  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
